<?xml version="1.0"?>
<package format="2">
  <name>um982_driver</name>
  <version>0.0.0</version>
  <description>Calibración satelital de IMU usando GPS RTK</description>
  
  <maintainer email="contacto.pablovallejos@gmail.com">Pablo Vallejos</maintainer>
  <maintainer email="contacto.manuelmolina@gmail.com">Manuel Molina</maintainer>
  
  <author email="contacto.pablovallejos@gmail.com">Pablo Vallejos</author>
  <author email="contacto.manuelmolina@gmail.com">Manuel Molina</author>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
